--- a/server_fastapi/requirements.txt
+++ b/server_fastapi/requirements.txt
@@ -6,3 +6,8 @@ pymongo==4.10.1
 nest-asyncio==1.6.0
 requests==2.32.3
 openai==1.59.9
+langgraph==0.2.67
+langgraph-checkpoint==2.0.10
+langgraph-checkpoint-mongodb==0.1.0
+langgraph-cli==0.1.69
+langgraph-sdk==0.1.51
