--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       - mongodb
     environment:
       - MONGO_URL=mongodb://mongodb:27017
+      - QDRANT_URL=http://qdrant:6333
 
   mongodb:
     image: mongo:6.0
@@ -25,5 +26,14 @@ services:
     volumes:
       - mongo-data:/data/db
 
+  qdrant:
+    image: qdrant/qdrant:latest 
+    container_name: qdrant
+    ports:
+      - "6333:6333"          
+    volumes:
+      - qdrant_data:/qdrant/storage
+
 volumes:
   mongo-data:
+  qdrant_data:
