--- a/server_fastapi/requirements.txt
+++ b/server_fastapi/requirements.txt
@@ -11,3 +11,4 @@ langgraph-checkpoint==2.0.10
 langgraph-checkpoint-mongodb==0.1.0
 langgraph-cli==0.1.69
 langgraph-sdk==0.1.51
+qdrant-client==1.13.2
