--- a/front_side/package.json
+++ b/front_side/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
+    "marked": "^15.0.6",
     "pinia": "^2.3.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
