--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     environment:
       - MONGO_URL=mongodb://mongodb:27017
       - QDRANT_URL=http://qdrant:6333
-      - OPENAI_API_KEY="YOUR OPENAI API KEY"
+      - OPENAI_API_KEY=YOUR_OPENAI_APIKEY
 
   mongodb:
     image: mongo:6.0
