--- a/server_fastapi/requirements.txt
+++ b/server_fastapi/requirements.txt
@@ -2,10 +2,12 @@ pydantic==2.10.1
 fastapi==0.115.2
 fastapi-cli==0.0.5
 beautifulsoup4==4.12.3
-pymongo==4.10.1
+pymongo==4.9.2
 nest-asyncio==1.6.0
 requests==2.32.3
 openai==1.59.9
+langchain==0.3.15
+langchain-openai==0.3.2
 langgraph==0.2.67
 langgraph-checkpoint==2.0.10
 langgraph-checkpoint-mongodb==0.1.0
